day2/lab05-ingress/deploy.hello-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  replicas: 3
  selector:
    matchLabels:
      app: hello-api
      rel: stable
  template:
    metadata:
      labels:
        app: hello-api
        rel: stable
    spec:
      containers:
      - name: hello-api
        image: hello-api:0.0.2
        ports:
        - containerPort: 3000
        imagePullPolicy: IfNotPresent
