day2/lab05-ingress/service.hello-api.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-api-service
spec:
  type: ClusterIP
  selector:
    app: hello-api
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
