day2/lab05-ingress/ingress.hello-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app: hello-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: hello-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-api-service
            port:
              number: 3000
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-api-service
            port:
              number: 3000
